[gd_scene load_steps=30 format=2]

[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/Open_Sans_Condensed/OpenSansCondensed-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/Open_Sans_Condensed/OpenSansCondensed-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/PlayButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Menus/PlayButtonNormal.png" type="Texture" id=5]
[ext_resource path="res://Menus/OutlineButtonPressed.png" type="Texture" id=6]
[ext_resource path="res://Menus/OutlineButtonNormal.png" type="Texture" id=7]
[ext_resource path="res://Obstacles/Asteroid.tscn" type="PackedScene" id=8]
[ext_resource path="res://Moon/Moon.png" type="Texture" id=9]
[ext_resource path="res://Ship/Rocket.png" type="Texture" id=10]
[ext_resource path="res://Menus/BouncingArrow.png" type="Texture" id=11]
[ext_resource path="res://Environment/Background_space.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=16]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 4.60905
margin_right = 4.60905
margin_top = 5.53086
margin_bottom = 4.74074

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )
margin_left = 5.66255
margin_right = 5.00412
margin_top = 5.1358
margin_bottom = 5.39918

[sub_resource type="DynamicFont" id=19]
size = 28
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=20]
size = 15
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=21]
size = 30
outline_size = 2
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=22]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=23]
load_path = "res://.import/Rocket.png-67a6fb667fdde41f533e35598bf7296b.stex"

[sub_resource type="StreamTexture" id=24]
load_path = "res://.import/Moon.png-c12328a8f07ce5a6bd979527de885102.stex"

[sub_resource type="StreamTexture" id=25]
load_path = "res://.import/OutlineButtonNormal.png-0d4070bdcd1e47bac06414f2b71a2555.stex"

[sub_resource type="StreamTexture" id=26]
load_path = "res://.import/OutlineButtonPressed.png-6a14d5eabc09de5401ec30087e2ce458.stex"

[sub_resource type="DynamicFont" id=27]
size = 30
outline_size = 2
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0196078, 0.0627451, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 71.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 16 )
text = "Moon Golf"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 491.0
margin_top = 472.0
margin_right = 524.0
margin_bottom = 504.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicensingButton" type="Button" parent="."]
margin_left = 22.5987
margin_top = 529.599
margin_right = 161.599
margin_bottom = 578.87
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Licenses"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
margin_left = 22.5987
margin_top = 462.167
margin_right = 161.599
margin_bottom = 511.439
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 17 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_colors/font_color_hover = Color( 0.215686, 0.215686, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Asteroid" parent="." instance=ExtResource( 8 )]
position = Vector2( 33.0886, 30.7346 )
scale = Vector2( 3, 3 )

[node name="Asteroid2" parent="." instance=ExtResource( 8 )]
position = Vector2( 833.453, 309.28 )
scale = Vector2( 3, 3 )

[node name="Asteroid3" parent="." instance=ExtResource( 8 )]
position = Vector2( 924.745, 101.797 )
scale = Vector2( 3, 3 )

[node name="Asteroid4" parent="." instance=ExtResource( 8 )]
position = Vector2( 312.153, 122.027 )
scale = Vector2( 3, 3 )

[node name="Asteroid5" parent="." instance=ExtResource( 8 )]
position = Vector2( 117.119, 283.863 )
scale = Vector2( 3, 3 )

[node name="MoonSprite" type="Sprite" parent="."]
position = Vector2( 511.445, 267.653 )
texture = ExtResource( 9 )

[node name="ShipSprite" type="Sprite" parent="."]
position = Vector2( 769.761, 399.923 )
rotation = -1.01578
texture = ExtResource( 10 )

[node name="LicensingInformation" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0196078, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicensingText" type="Label" parent="LicensingInformation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.5
margin_top = -281.5
margin_right = 499.5
margin_bottom = 281.5
custom_fonts/font = SubResource( 20 )
text = "Godot Game Engine:
https://godotengine.org/license
This game uses Godot Engine, available under the following license:

Copyright (c) 2007-2020 Juan Linietsky, Ariel Manzur. Copyright (c) 2014-2020 Godot Engine contributors.

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \\\\\\\"Software\\\\\\\"), 
to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or 
sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \\\\\\\"AS IS\\\\\\\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES 
OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS 
BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR 
IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

Portions of this software are copyright Â© 2020 The FreeType Project (www.freetype.org). All rights reserved.

Font:
https://fonts.google.com/specimen/Open+Sans+Condensed
Fonts are licensed under the Apache License, Version 2.0. "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="LicensingInformation"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0
margin_top = 24.0
margin_right = -21.0
margin_bottom = 56.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LicensingInformation/Back"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.22449
margin_bottom = 3.77551
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialInformation" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0196078, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TutorialInformation"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -475.0
margin_top = -269.0
margin_right = 480.0
margin_bottom = -178.0
custom_fonts/font = SubResource( 22 )
text = "Your goal is to land your ship on the moon.
To achieve this, you'll want to use the mouse to pull back on the ship, aim the direction you want the ship to travel, and let go.
Try and make it to the moon in as little moves as possible.
But be careful, there are asteroids out there.

Good Luck and Have Fun!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipSprite2" type="Sprite" parent="TutorialInformation"]
position = Vector2( 398.885, 347.015 )
rotation = 1.5708
texture = SubResource( 23 )

[node name="MoonSprite2" type="Sprite" parent="TutorialInformation"]
position = Vector2( 572.133, 348.571 )
texture = SubResource( 24 )

[node name="BackButton" type="TextureButton" parent="TutorialInformation"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -53.0
margin_top = 24.0
margin_right = -21.0
margin_bottom = 56.0
texture_normal = SubResource( 25 )
texture_pressed = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TutorialInformation/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.22449
margin_bottom = 3.77551
custom_fonts/font = SubResource( 27 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="AnimatedSprite" parent="TutorialInformation"]
position = Vector2( 496.921, 347.015 )
frames = SubResource( 28 )
speed_scale = 2.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
pitch_scale = 0.5
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="LicensingButton" to="." method="_on_LicensingButton_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="LicensingInformation/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="TutorialInformation/BackButton" to="." method="_on_BackButton_pressed"]
